k8s/overlays/staging/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cinevision-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "staging.DOMAIN_NAME"
    - "api.staging.DOMAIN_NAME"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "staging.DOMAIN_NAME"
    - "api.staging.DOMAIN_NAME"
